# python-for-dummies

./: pyproject.toml
Parte I - Python Básico/installing/: index.html
python_for_dummies/: mkdocs.yml
python_for_dummies/docs/: index.md
python_for_dummies/docs/themes/css/: extra_css.css
python_for_dummies/site/: 404.html  index.html
python_for_dummies/site/Parte I - Python Básico/installing/: index.html
python_for_dummies/site/Parte II - Sequências/soon/: index.html
python_for_dummies/site/Parte III - Funções/soon/: index.html
python_for_dummies/site/Parte IV - Programação Orientada a Objetos/soon/: index.html
search/: search_index.json
